--- a/skeleton.qsf
+++ b/skeleton.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE115F29C7
-set_global_assignment -name TOP_LEVEL_ENTITY dmem
+set_global_assignment -name TOP_LEVEL_ENTITY skeleton
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 13.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "23:44:54  JUNE 23, 2016"
 set_global_assignment -name LAST_QUARTUS_VERSION 16.0.0
@@ -51,6 +51,9 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
 set_location_assignment PIN_G18 -to seg1[0]
 set_location_assignment PIN_F22 -to seg1[1]
@@ -61,6 +64,7 @@ set_location_assignment PIN_J22 -to seg1[5]
 set_location_assignment PIN_H22 -to seg1[6]
 set_location_assignment PIN_G6 -to ps2_clock
 set_location_assignment PIN_H5 -to ps2_data
+set_location_assignment PIN_M23 -to resetn
 set_location_assignment PIN_L6 -to lcd_blon
 set_location_assignment PIN_M5 -to lcd_data[7]
 set_location_assignment PIN_M3 -to lcd_data[6]
@@ -161,12 +165,7 @@ set_location_assignment PIN_H21 -to leds[4]
 set_location_assignment PIN_G20 -to leds[5]
 set_location_assignment PIN_G22 -to leds[6]
 set_location_assignment PIN_G21 -to leds[7]
-set_location_assignment PIN_R24 -to key_up
-set_location_assignment PIN_M21 -to key_right
-set_location_assignment PIN_N21 -to key_left
-set_location_assignment PIN_M23 -to key_down
 set_global_assignment -name VERILOG_FILE dffe_ref.v
-set_global_assignment -name VERILOG_FILE mux_24bit.v
 set_global_assignment -name VERILOG_FILE decoder.v
 set_global_assignment -name MIF_FILE index.mif
 set_global_assignment -name MIF_FILE index_logo.mif
@@ -181,10 +180,16 @@ set_global_assignment -name VERILOG_FILE PS2_Interface.v
 set_global_assignment -name VERILOG_FILE PS2_Controller.v
 set_global_assignment -name VERILOG_FILE processor.v
 set_global_assignment -name VERILOG_FILE pll.v
+set_global_assignment -name QIP_FILE pll.qip
+set_global_assignment -name SOURCE_FILE pll.cmp
 set_global_assignment -name SYSTEMVERILOG_FILE lcd.sv
 set_global_assignment -name VERILOG_FILE imem.v
+set_global_assignment -name QIP_FILE imem.qip
+set_global_assignment -name SOURCE_FILE imem.cmp
 set_global_assignment -name VERILOG_FILE Hexadecimal_To_Seven_Segment.v
 set_global_assignment -name VERILOG_FILE dmem.v
+set_global_assignment -name QIP_FILE dmem.qip
+set_global_assignment -name SOURCE_FILE dmem.cmp
 set_global_assignment -name VERILOG_FILE Altera_UP_PS2_Data_In.v
 set_global_assignment -name VERILOG_FILE Altera_UP_PS2_Command_Out.v
 set_global_assignment -name VERILOG_FILE vga_controller.v
@@ -193,7 +198,4 @@ set_global_assignment -name VERILOG_FILE img_index.v
 set_global_assignment -name VERILOG_FILE img_data.v
 set_global_assignment -name MIF_FILE lab7_img_data.mif
 set_global_assignment -name MIF_FILE lab7_img_index.mif
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
