--- a/skeleton.qsf
+++ b/skeleton.qsf
@@ -165,6 +165,8 @@ set_location_assignment PIN_H21 -to leds[4]
 set_location_assignment PIN_G20 -to leds[5]
 set_location_assignment PIN_G22 -to leds[6]
 set_location_assignment PIN_G21 -to leds[7]
+set_global_assignment -name VERILOG_FILE mux_24bit.v
+set_global_assignment -name VERILOG_FILE block.v
 set_global_assignment -name VERILOG_FILE dffe_ref.v
 set_global_assignment -name VERILOG_FILE decoder.v
 set_global_assignment -name MIF_FILE index.mif
