--- a/skeleton.qsf
+++ b/skeleton.qsf
@@ -165,6 +165,7 @@ set_location_assignment PIN_G21 -to leds[7]
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name VERILOG_FILE ref2ind.v
 set_global_assignment -name VERILOG_FILE stop_sign.v
 set_global_assignment -name VERILOG_FILE shape.v
 set_global_assignment -name VERILOG_FILE ZBlock.v
